# csproject

repos/__MACOSX/: ._repos
repos/repos/: .gitignore  kafka-cluster.yaml
repos/repos/IoT-Listener/: .env  .gitignore  .prettierrc.json  ARCHITECTURE_ISSUE.md  Cargo.toml  Dockerfile  FIX_PROPOSAL.md  README.md  build-images.sh  collector_fix.txt  taskfile.yaml  validate-env.sh
repos/repos/IoT-Listener/docs/: schema.sql  test_data.sql
repos/repos/IoT-Listener/externalsources/http/: README.md  server.py  start-http.sh
repos/repos/IoT-Listener/externalsources/mqtt/: README.md  docker-compose.yml  publish-test-messages.sh  start-mqtt.sh  stop-mqtt.sh  subscribe-messages.sh
repos/repos/IoT-Listener/externalsources/mqtt/mosquitto/config/: mosquitto.conf
repos/repos/IoT-Listener/migration/: Cargo.toml  insert_init_data.sql  schema.sql  update.sql
repos/repos/IoT-Listener/migration/src/: m20220101_000001_create_table.rs
repos/repos/IoT-Listener/src/: lib.rs  main.rs
repos/repos/IoT-Listener/src/entities/: debug_messages.rs  flow_error.rs  iot_deployment.rs  iot_flow.rs  iot_flow_debug_message.rs  mod.rs  prelude.rs  reading.rs  sea_orm_active_enums.rs  sensor.rs  sensor_metadata.rs  sensors.rs  site.rs
repos/repos/IoT-Listener/src/graph/: build_graph.rs  concrete_node.rs  edge.rs  flow_updates.rs  mod.rs  node.rs  trigger_data.rs  types.rs
repos/repos/IoT-Listener/src/graph/utils/: collections_iter.rs  mod.rs  normalization.rs  payload_utils.rs  propagation.rs
repos/repos/IoT-Listener/src/metrics/: mod.rs
repos/repos/IoT-Listener/src/nodes/: average.rs  constant.rs  current_timestamp.rs  datalake.rs  debug.rs  index.rs  key.rs  legacy.rs  lorawan.rs  mas_monitor.rs  metadata.rs  mod.rs  sensor.rs
repos/repos/IoT-Listener/src/nodes/sources/: http.rs  kafka.rs  mas_monitor.rs  mod.rs  mqtt.rs
repos/repos/IoT-Listener/src/readings/: debug.rs  iot.rs  legacy.rs  mas_monitor.rs  mod.rs
repos/repos/IoT-Listener/src/sources/: http.rs  kafka.rs  mas_monitor.rs  mod.rs  mqtt.rs  mqtt_test.rs
repos/repos/IoT-Listener/src/sources/traits/: async_trait.rs  mod.rs  rest.rs
repos/repos/IoT-Listener/src/utils/: error.rs  mod.rs
repos/repos/IoT-Listener/src/utils/subscribe/: database.rs  mod.rs  sources.rs
repos/repos/IoT-Listener/tests/: intergration_tests.rs
repos/repos/IoT-Operator/: .env  .env.example  .gitignore  .golangci.yml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  kind-config-listener.yaml
repos/repos/k8s-manifests/: postgres.yaml
repos/repos/local_test_toolkits/: compose.yml  test_kafka.sh
(+85 files in other folders)
