[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
# Note: We are using tokio as the async runtime (from main project), 
# so async-std might not be strictly necessary for the CLI runner, 
# but it's included by default. We can keep it or remove it if not needed otherwise.
tokio = {version = "*", features = ["full"]}
[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature for Tokio
  "sqlx-postgres",        # `DATABASE_DRIVER` feature for PostgreSQL
]